Resolve all 29 code-review findings (COBOL→Java migration foundation)
Addresses the NOT-APPROVED review of the AWS CardDemo COBOL→Java/Spring
Boot migration. All 29 findings (2 CRITICAL, 17 MAJOR, 9 MINOR, 1 INFO)
resolved and verified; build compiles clean (56 sources) with zero
compiler and zero JVM-runtime warnings.

CRITICAL
- F1  Persist PIC-9 Long/Integer entity fields as NUMERIC via
      @JdbcTypeCode(SqlTypes.NUMERIC) (14 fields / 8 entities) — no more
      bigint/integer schema drift from COBOL fixed-scale decimals.
- F2  Create Spring Batch metadata via Flyway V0__spring_batch_metadata.sql
      (6 BATCH_* tables + 3 sequences, verbatim from the library script) and
      set spring.batch.jdbc.initialize-schema: never — jobs can start/restart.

MAJOR
- F3  Rework DateConversionService (CSUTLDTC/CEEDAYS parity) to positional
      extraction + LocalDate.of with a ValidationOutcome enum (feedback
      codes/severity/msgNo) and 80-byte LS-RESULT layout.
- F4  Rebuild FixedWidthRecordMapper on byte[] + an explicit single-byte
      charset; preserve FILLER and signed-zero byte-exact; reject (not
      truncate) overlong fields; CWE-532-safe messages.
- F5  Bind HikariCP via @ConfigurationProperties(prefix spring.datasource.hikari)
      + .type(HikariDataSource.class).
- F6  CardXref: retain the frozen composite @IdClass and add UNIQUE
      uk_card_xref_card_num.
- F7  Correct Transaction/docs: TRANIDX AIX = TRAN-PROC-TS (proc_ts) index;
      findByCardNum is a separate functional query, not the AIX.
- F8  Add the 4 missing CVTRA07Y report DTOs (TransactionDetailReport,
      ReportPageTotals, ReportAccountTotals, ReportGrandTotals), byte-parity.
- F9  Redact toString() to class-name + identity hash across 25 sensitive
      types (7 entities, 4 DTOs, 1 principal, 13 screen forms) — CWE-532.
- F10 Proxy-safe equals/hashCode on all 10 entities (instanceof + non-null-id
      equals; constant class hashCode).
- F11 Reconcile docs/decision-log.md (status + 9 